@@ -1,5 +1,0 @@
-for s in 0 1; do
-  export SHORT=$s
-
-  buildall
-done
