@@ -1,3 +1,8 @@
+2013-04-28 Hannes Loeffler <Hannes.Loeffler@gmail.com>
+
+* fpw-scripts1.1.0
+* first working version of convert-all.pl
+
 2013-04-23 Hannes Loeffler <Hannes.Loeffler@gmail.com>
 
 * now hosted on http://code.google.com/p/fpw-scripts/
